# rover26

./: .env  .env.example  .gitignore  Makefile  SETUP.md  requirements.txt
.github/: copilot-instructions.md
config/: hardware_pins.yaml  joystick_buttons.yaml  kinematics.yaml  pid_ks.yaml
src/control/: package.xml  setup.py
src/control/launch/: health_monitoring_test.launch.py  run.launch.py
src/control/test/: conftest.py  test_actuator_services.py  test_esp_data_controller.py  test_i2c_service.py  test_kinematics.py  test_manual_navigation_node.py  test_spi_service.py
src/control/tools/: spi_live_read.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: ActuatorCommand.msg  EncoderRevolutions.msg  EulerAngles.msg  HealthReport.msg  LogEntry.msg  MotorCommands.msg
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: joint_names_rover.yaml
src/rover_description/launch/: competition_world.launch.py  empty_world.launch.py  gazebo.launch.py  rover_display.launch.py
src/rover_description/meshes/: LB_link.STL  LC_link.STL  LCam_link.STL  LF_link.STL  RB_link.STL  RC_link.STL  RCam_link.STL  RF_link.STL  lidar.STL
src/rover_description/rviz/: rover_config.rviz
src/rover_description/urdf/: rover.csv  rover.urdf  rover.urdf.xacro  rover_base.urdf  rover_gazebo.urdf
src/rover_nav/: package.xml  setup.py
src/rover_nav/config/: ekf.yaml  nav2_params.yaml  slam_toolbox_params.yaml
src/rover_nav/launch/: bringup.launch.py  localization.launch.py  navigation.launch.py  robot_state_publisher.launch.py  slam.launch.py
src/rover_nav/urdf/: rover_with_sensors.urdf.xacro
src/utils/: package.xml  setup.py
(+44 files in other folders)
