<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_nav</name>
  <version>0.0.0</version>
  <description>Navigation stack configuration for rover26 (nav2, slam_toolbox, robot_localization, robot_state_publisher)</description>
  <maintainer email="youremail@example.com">alkady</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Navigation -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>

  <!-- SLAM -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Localization -->
  <exec_depend>robot_localization</exec_depend>

  <!-- Description -->
  <exec_depend>rover_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
